   Instead there is a new ``discovery.zen.hosts_provider`` settings which can
   be set to either ``srv`` or ``azure``.

Breaking Changes (Packaging only)
=================================

 - The sigar jar and object files have been moved from ``plugins/sigar`` to
   ``lib/sigar``.

Changes
=======

 - Queries which contain a correlated subquery will now result in an error
   stating that correlated subqueries are not supported, instead of a more
   confusing error indicating that a relation is unknown.

 - Added column ``username`` to ``sys.jobs`` and ``sys.jobs_log`` that contains
   the username under which the job was invoked.

 - Upgraded the Admin UI to 1.4.0

 - Upgraded Crash to 0.21.2

 - The table setting ``recovery.initial_shards`` has been deprecated. You may
   set ``gateway.local.initial_shards`` per node instead. Crate will continue to
   read the old setting but applications should be migrated to the new setting.

 - Updated Elasticsearch to 5.2.2

 - Added support for ``GRANT`` and ``REVOKE`` privileges for accessing the
   cluster. Currently supported privilege types: ``DQL``, ``DML`` and ``DDL``.

 - Added support for client certificate authentication via HBA.

 - Added SSL/TLS support for HTTP endpoints.

 - Added new HBA setting ``ssl`` which allows to control whether
   users have to connect with ssl enabled or disabled.

 - Added SSL/TLS support for PostgreSQL Wire Protocol.

 - Extended the output of the  ``EXPLAIN`` statement.

 - Added support for joins on virtual tables.

Fixes
=====

 - Fixed an issue that caused an exception if a column gets added to a table
   that has been created with CrateDB version <= 1.1.

 - Fixed a regression that caused queries with a ``GROUP BY`` on array-columns,
   which are wrapped in a scalar function, to fail.

 - Corrected wrong enterprise configuration example in ``crate.yml`` from
   ``auth.host_based.http_default_user`` to ``auth.trust.http_default_user``